// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Slider Snapshots tests should match snapshot default 1`] = `
<div>
  <div
    class="component size-2 dotsHidden noUi-target noUi-ltr noUi-horizontal noUi-txt-dir-ltr noUi-state-tap"
  >
    <div
      class="noUi-base"
    >
      <div
        class="noUi-connects"
      >
        <div
          class="noUi-connect"
          style="transform: translate(0%, 0) scale(0, 1);"
        />
      </div>
      <div
        class="noUi-origin"
        style="transform: translate(-100%, 0); z-index: 4;"
      >
        <div
          aria-orientation="horizontal"
          aria-valuemax="100.0"
          aria-valuemin="0.0"
          aria-valuenow="0.0"
          aria-valuetext="0.00"
          class="noUi-handle noUi-handle-lower"
          data-handle="0"
          role="slider"
          tabindex="0"
        >
          <div
            class="noUi-touch-area"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots tests should match snapshot with custom dots enabled 1`] = `
<div>
  <div
    class="component size-2 hideLargePips noUi-target noUi-ltr noUi-horizontal noUi-txt-dir-ltr noUi-state-tap"
  >
    <div
      class="noUi-base"
    >
      <div
        class="noUi-connects"
      >
        <div
          class="noUi-connect"
          style="transform: translate(0%, 0) scale(0, 1);"
        />
      </div>
      <div
        class="noUi-origin"
        style="transform: translate(-100%, 0); z-index: 4;"
      >
        <div
          aria-orientation="horizontal"
          aria-valuemax="7.0"
          aria-valuemin="1.0"
          aria-valuenow="1.0"
          aria-valuetext="1.00"
          class="noUi-handle noUi-handle-lower"
          data-handle="0"
          role="slider"
          tabindex="0"
        >
          <div
            class="noUi-touch-area"
          />
        </div>
      </div>
    </div>
    <div
      class="noUi-pips noUi-pips-horizontal"
    >
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        data-current="true"
        style="left: 0%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="1"
        style="left: 0%;"
      >
        1
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large hide-for-pips-value"
        style="left: 16.66667%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="2"
        style="left: 16.66667%;"
      >
        2
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large hide-for-pips-value"
        style="left: 33.33333%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="3"
        style="left: 33.33333%;"
      >
        3
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        style="left: 50%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="4"
        style="left: 50%;"
      >
        4
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large hide-for-pips-value"
        style="left: 66.66667%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="5"
        style="left: 66.66667%;"
      >
        5
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        style="left: 75%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="5.5"
        style="left: 75%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large hide-for-pips-value"
        style="left: 83.33333%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="6"
        style="left: 83.33333%;"
      >
        6
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        style="left: 100%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="7"
        style="left: 100%;"
      >
        7
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots tests should match snapshot with dots enabled 1`] = `
<div>
  <div
    class="component size-2 noUi-target noUi-ltr noUi-horizontal noUi-txt-dir-ltr noUi-state-tap"
  >
    <div
      class="noUi-base"
    >
      <div
        class="noUi-connects"
      >
        <div
          class="noUi-connect"
          style="transform: translate(0%, 0) scale(0.5, 1);"
        />
      </div>
      <div
        class="noUi-origin"
        style="transform: translate(-50%, 0); z-index: 4;"
      >
        <div
          aria-orientation="horizontal"
          aria-valuemax="5.0"
          aria-valuemin="1.0"
          aria-valuenow="3.0"
          aria-valuetext="3.00"
          class="noUi-handle noUi-handle-lower"
          data-handle="0"
          role="slider"
          tabindex="0"
        >
          <div
            class="noUi-touch-area"
          />
        </div>
      </div>
    </div>
    <div
      class="noUi-pips noUi-pips-horizontal"
    >
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        data-passed="true"
        style="left: 0%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="1"
        style="left: 0%;"
      >
        1
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 1%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 2%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 3%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 4%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 5%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 6%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 7%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 8%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 9%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 10%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 11%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 12%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 13%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 14%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 15%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 16%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 17%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 18%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 19%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 20%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 21%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 22%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 23%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 24%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        data-passed="true"
        style="left: 25%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="2"
        style="left: 25%;"
      >
        2
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 26%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 27%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 28%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 29%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 30%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 31%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 32%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 33%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 34%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 35%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 36%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-passed="true"
        style="left: 37%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 38%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 39%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 40%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 41%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 42%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 43%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 44%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 45%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 46%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 47%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 48%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 49%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        data-current="true"
        style="left: 50%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="3"
        style="left: 50%;"
      >
        3
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 51%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 52%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 53%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 54%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 55%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 56%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 57%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 58%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 59%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 60%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 61%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 62%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 63%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 64%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 65%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 66%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 67%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 68%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 69%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 70%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 71%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 72%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 73%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 74%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        style="left: 75%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="4"
        style="left: 75%;"
      >
        4
      </div>
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 76%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 77%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 78%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 79%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 80%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 81%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 82%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 83%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 84%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 85%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 86%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 87%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 88%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 89%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 90%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 91%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 92%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 93%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 94%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 95%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 96%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 97%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 98%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 99%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        style="left: 100%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="5"
        style="left: 100%;"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots tests should match snapshot with pipsLabel set to none 1`] = `
<div>
  <div
    class="component size-2 numbersDisabled noUi-target noUi-ltr noUi-horizontal noUi-txt-dir-ltr noUi-state-tap"
  >
    <div
      class="noUi-base"
    >
      <div
        class="noUi-connects"
      >
        <div
          class="noUi-connect"
          style="transform: translate(0%, 0) scale(0, 1);"
        />
      </div>
      <div
        class="noUi-origin"
        style="transform: translate(-100%, 0); z-index: 4;"
      >
        <div
          aria-orientation="horizontal"
          aria-valuemax="3.0"
          aria-valuemin="1.0"
          aria-valuenow="1.0"
          aria-valuetext="1.00"
          class="noUi-handle noUi-handle-lower"
          data-handle="0"
          role="slider"
          tabindex="0"
        >
          <div
            class="noUi-touch-area"
          />
        </div>
      </div>
    </div>
    <div
      class="noUi-pips noUi-pips-horizontal"
    >
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        data-current="true"
        style="left: 0%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="1"
        style="left: 0%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 1%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 2%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 3%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 4%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 5%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 6%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 7%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 8%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 9%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 10%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 11%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 12%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 13%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 14%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 15%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 16%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 17%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 18%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 19%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 20%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 21%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 22%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 23%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        data-current="true"
        style="left: 24%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 25%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 26%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 27%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 28%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 29%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 30%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 31%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 32%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 33%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 34%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 35%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 36%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 37%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 38%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 39%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 40%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 41%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 42%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 43%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 44%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 45%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 46%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 47%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 48%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 49%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        style="left: 50%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="2"
        style="left: 50%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 51%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 52%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 53%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 54%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 55%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 56%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 57%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 58%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 59%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 60%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 61%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 62%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 63%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 64%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 65%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 66%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 67%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 68%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 69%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 70%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 71%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 72%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 73%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 74%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 75%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 76%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 77%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 78%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 79%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 80%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 81%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 82%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 83%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 84%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 85%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 86%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 87%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 88%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 89%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 90%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 91%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 92%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 93%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 94%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 95%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 96%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 97%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 98%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-normal"
        style="left: 99%;"
      />
      <div
        class="noUi-marker noUi-marker-horizontal noUi-marker-large"
        style="left: 100%;"
      />
      <div
        class="noUi-value noUi-value-horizontal noUi-value-large"
        data-value="3"
        style="left: 100%;"
      />
    </div>
  </div>
</div>
`;
